src/main/java/ASM6502asm/ASM6502Parser.java
// Generated from ASM6502asm\ASM6502Parser.g4 by ANTLR 4.9.1
package ASM6502asm;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ASM6502Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BLOCK_COMMENT=2, MODIFIER_HI=3, MODIFIER_LO=4, MODIFIER_PCREL_HI=5, 
		MODIFIER_PCREL_LO=6, DOT_ATTRIBUTE=7, DOT_ALIGN=8, DOT_EQU=9, DOT_EXTERN=10, 
		DOT_SECTION=11, DOT_GLOBL=12, DOT_GLOBAL=13, DOT_TEXT=14, DOT_TYPE=15, 
		DOT_DATA=16, DOT_BYTE=17, DOT_SPACE=18, DOT_HALF=19, DOT_WEAK=20, DOT_WORD=21, 
		DOT_DWORD=22, DOT_FILE=23, DOT_RODATA=24, DOT_ASCII=25, DOT_ASCIZ=26, 
		DOT_ASCIIZ=27, DOT_SKIP=28, DOT_STRING=29, DOT_OPTION=30, DOT_SIZE=31, 
		DOT_IDENT=32, I_AND=33, I_LDA=34, I_STA=35, REG_ZERO_ABI=36, REG_AT_ABI=37, 
		REG_V0_ABI=38, REG_V1_ABI=39, REG_A0_ABI=40, REG_A1_ABI=41, REG_A2_ABI=42, 
		REG_A3_ABI=43, REG_T0_ABI=44, REG_T1_ABI=45, REG_T2_ABI=46, REG_T3_ABI=47, 
		REG_T4_ABI=48, REG_T5_ABI=49, REG_T6_ABI=50, REG_T7_ABI=51, REG_S0_ABI=52, 
		REG_S1_ABI=53, REG_S2_ABI=54, REG_S3_ABI=55, REG_S4_ABI=56, REG_S5_ABI=57, 
		REG_S6_ABI=58, REG_S7_ABI=59, REG_T8_ABI=60, REG_T9_ABI=61, REG_K0_ABI=62, 
		REG_K1_ABI=63, REG_GP_ABI=64, REG_SP_ABI=65, REG_FP_ABI=66, REG_RA_ABI=67, 
		ASTERISK=68, PLUS=69, MINUS=70, PERCENT=71, DOT=72, DOLLAR=73, COLON=74, 
		COMMA=75, OPENING_BRACKET=76, CLOSING_BRACKET=77, HASH=78, BIN_NUMERIC=79, 
		DEC_NUMERIC=80, HEX_NUMERIC=81, IDENTIFIER=82, WS=83, STRING_LITERAL=84, 
		UNTERMINATED_STRING_LITERAL=85, NEWLINE=86;
	public static final int
		RULE_asm_file = 0, RULE_asm_line = 1, RULE_label = 2, RULE_mnemonic = 3, 
		RULE_params = 4, RULE_param = 5, RULE_immediate = 6, RULE_offset = 7, 
		RULE_modifier = 8, RULE_expr = 9, RULE_register = 10, RULE_assembler_instruction = 11, 
		RULE_attribute_assembler_instruction = 12, RULE_align_assembler_instruction = 13, 
		RULE_equ_assembler_instruction = 14, RULE_extern_assembler_instruction = 15, 
		RULE_section_definition_assembler_instruction = 16, RULE_globl_assembler_instruction = 17, 
		RULE_global_assembler_instruction = 18, RULE_text_assembler_instruction = 19, 
		RULE_type_assembler_instruction = 20, RULE_data_assembler_instruction = 21, 
		RULE_byte_assembler_instruction = 22, RULE_space_assembler_instruction = 23, 
		RULE_half_assembler_instruction = 24, RULE_weak_assembler_instruction = 25, 
		RULE_word_assembler_instruction = 26, RULE_dword_assembler_instruction = 27, 
		RULE_file_assembler_instruction = 28, RULE_skip_assembler_instruction = 29, 
		RULE_ascii_assembler_instruction = 30, RULE_asciz_assembler_instruction = 31, 
		RULE_asciiz_assembler_instruction = 32, RULE_string_assembler_instruction = 33, 
		RULE_option_assembler_instruction = 34, RULE_size_assembler_instruction = 35, 
		RULE_ident_assembler_instruction = 36, RULE_csv_identifier_list = 37, 
		RULE_csv_numeric_list = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"asm_file", "asm_line", "label", "mnemonic", "params", "param", "immediate", 
			"offset", "modifier", "expr", "register", "assembler_instruction", "attribute_assembler_instruction", 
			"align_assembler_instruction", "equ_assembler_instruction", "extern_assembler_instruction", 
			"section_definition_assembler_instruction", "globl_assembler_instruction", 
			"global_assembler_instruction", "text_assembler_instruction", "type_assembler_instruction", 
			"data_assembler_instruction", "byte_assembler_instruction", "space_assembler_instruction", 
			"half_assembler_instruction", "weak_assembler_instruction", "word_assembler_instruction", 
			"dword_assembler_instruction", "file_assembler_instruction", "skip_assembler_instruction", 
			"ascii_assembler_instruction", "asciz_assembler_instruction", "asciiz_assembler_instruction", 
			"string_assembler_instruction", "option_assembler_instruction", "size_assembler_instruction", 
			"ident_assembler_instruction", "csv_identifier_list", "csv_numeric_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'*'", "'+'", "'-'", 
			"'%'", "'.'", "'$'", "':'", "','", "'('", "')'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "BLOCK_COMMENT", "MODIFIER_HI", "MODIFIER_LO", 
			"MODIFIER_PCREL_HI", "MODIFIER_PCREL_LO", "DOT_ATTRIBUTE", "DOT_ALIGN", 
			"DOT_EQU", "DOT_EXTERN", "DOT_SECTION", "DOT_GLOBL", "DOT_GLOBAL", "DOT_TEXT", 
			"DOT_TYPE", "DOT_DATA", "DOT_BYTE", "DOT_SPACE", "DOT_HALF", "DOT_WEAK", 
			"DOT_WORD", "DOT_DWORD", "DOT_FILE", "DOT_RODATA", "DOT_ASCII", "DOT_ASCIZ", 
			"DOT_ASCIIZ", "DOT_SKIP", "DOT_STRING", "DOT_OPTION", "DOT_SIZE", "DOT_IDENT", 
			"I_AND", "I_LDA", "I_STA", "REG_ZERO_ABI", "REG_AT_ABI", "REG_V0_ABI", 
			"REG_V1_ABI", "REG_A0_ABI", "REG_A1_ABI", "REG_A2_ABI", "REG_A3_ABI", 
			"REG_T0_ABI", "REG_T1_ABI", "REG_T2_ABI", "REG_T3_ABI", "REG_T4_ABI", 
			"REG_T5_ABI", "REG_T6_ABI", "REG_T7_ABI", "REG_S0_ABI", "REG_S1_ABI", 
			"REG_S2_ABI", "REG_S3_ABI", "REG_S4_ABI", "REG_S5_ABI", "REG_S6_ABI", 
			"REG_S7_ABI", "REG_T8_ABI", "REG_T9_ABI", "REG_K0_ABI", "REG_K1_ABI", 
			"REG_GP_ABI", "REG_SP_ABI", "REG_FP_ABI", "REG_RA_ABI", "ASTERISK", "PLUS", 
			"MINUS", "PERCENT", "DOT", "DOLLAR", "COLON", "COMMA", "OPENING_BRACKET", 
			"CLOSING_BRACKET", "HASH", "BIN_NUMERIC", "DEC_NUMERIC", "HEX_NUMERIC", 
			"IDENTIFIER", "WS", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", 
			"NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ASM6502Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ASM6502Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Asm_fileContext extends ParserRuleContext {
		public List<Asm_lineContext> asm_line() {
			return getRuleContexts(Asm_lineContext.class);
		}
		public Asm_lineContext asm_line(int i) {
			return getRuleContext(Asm_lineContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ASM6502Parser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ASM6502Parser.NEWLINE, i);
		}
		public Asm_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asm_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).enterAsm_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).exitAsm_file(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASM6502ParserVisitor ) return ((ASM6502ParserVisitor<? extends T>)visitor).visitAsm_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asm_fileContext asm_file() throws RecognitionException {
		Asm_fileContext _localctx = new Asm_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_asm_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(82);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						{
						setState(78);
						asm_line();
						setState(79);
						match(NEWLINE);
						}
						}
						break;
					case 2:
						{
						{
						setState(81);
						match(NEWLINE);
						}
						}
						break;
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(87);
				asm_line();
				}
				break;
			case 2:
				{
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(88);
					match(NEWLINE);
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Asm_lineContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ASM6502Parser.COLON, 0); }
		public MnemonicContext mnemonic() {
			return getRuleContext(MnemonicContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Assembler_instructionContext assembler_instruction() {
			return getRuleContext(Assembler_instructionContext.class,0);
		}
		public Asm_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asm_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).enterAsm_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).exitAsm_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASM6502ParserVisitor ) return ((ASM6502ParserVisitor<? extends T>)visitor).visitAsm_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asm_lineContext asm_line() throws RecognitionException {
		Asm_lineContext _localctx = new Asm_lineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_asm_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & ((1L << (BIN_NUMERIC - 79)) | (1L << (DEC_NUMERIC - 79)) | (1L << (HEX_NUMERIC - 79)) | (1L << (IDENTIFIER - 79)))) != 0)) {
				{
				setState(96);
				label();
				setState(97);
				match(COLON);
				}
			}

			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case I_AND:
			case I_LDA:
			case I_STA:
				{
				setState(101);
				mnemonic();
				setState(102);
				params();
				}
				break;
			case DOT_ATTRIBUTE:
			case DOT_ALIGN:
			case DOT_EQU:
			case DOT_EXTERN:
			case DOT_SECTION:
			case DOT_GLOBL:
			case DOT_GLOBAL:
			case DOT_TEXT:
			case DOT_TYPE:
			case DOT_DATA:
			case DOT_BYTE:
			case DOT_SPACE:
			case DOT_HALF:
			case DOT_WEAK:
			case DOT_WORD:
			case DOT_DWORD:
			case DOT_FILE:
			case DOT_ASCII:
			case DOT_ASCIZ:
			case DOT_ASCIIZ:
			case DOT_SKIP:
			case DOT_STRING:
			case DOT_OPTION:
			case DOT_SIZE:
			case DOT_IDENT:
				{
				setState(104);
				assembler_instruction();
				}
				break;
			case EOF:
			case NEWLINE:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ASM6502Parser.IDENTIFIER, 0); }
		public TerminalNode BIN_NUMERIC() { return getToken(ASM6502Parser.BIN_NUMERIC, 0); }
		public TerminalNode DEC_NUMERIC() { return getToken(ASM6502Parser.DEC_NUMERIC, 0); }
		public TerminalNode HEX_NUMERIC() { return getToken(ASM6502Parser.HEX_NUMERIC, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASM6502ParserVisitor ) return ((ASM6502ParserVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !(((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & ((1L << (BIN_NUMERIC - 79)) | (1L << (DEC_NUMERIC - 79)) | (1L << (HEX_NUMERIC - 79)) | (1L << (IDENTIFIER - 79)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MnemonicContext extends ParserRuleContext {
		public TerminalNode I_AND() { return getToken(ASM6502Parser.I_AND, 0); }
		public TerminalNode I_LDA() { return getToken(ASM6502Parser.I_LDA, 0); }
		public TerminalNode I_STA() { return getToken(ASM6502Parser.I_STA, 0); }
		public MnemonicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mnemonic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).enterMnemonic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).exitMnemonic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASM6502ParserVisitor ) return ((ASM6502ParserVisitor<? extends T>)visitor).visitMnemonic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MnemonicContext mnemonic() throws RecognitionException {
		MnemonicContext _localctx = new MnemonicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mnemonic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << I_AND) | (1L << I_LDA) | (1L << I_STA))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASM6502ParserVisitor ) return ((ASM6502ParserVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_params);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			param();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public ImmediateContext immediate() {
			return getRuleContext(ImmediateContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASM6502ParserVisitor ) return ((ASM6502ParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HASH:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				immediate();
				}
				break;
			case REG_ZERO_ABI:
			case REG_AT_ABI:
			case REG_V0_ABI:
			case REG_V1_ABI:
			case REG_A0_ABI:
			case REG_A1_ABI:
			case REG_A2_ABI:
			case REG_A3_ABI:
			case REG_T0_ABI:
			case REG_T1_ABI:
			case REG_T2_ABI:
			case REG_T3_ABI:
			case REG_T4_ABI:
			case REG_T5_ABI:
			case REG_T6_ABI:
			case REG_T7_ABI:
			case REG_S0_ABI:
			case REG_S1_ABI:
			case REG_S2_ABI:
			case REG_S3_ABI:
			case REG_S4_ABI:
			case REG_S5_ABI:
			case REG_S6_ABI:
			case REG_S7_ABI:
			case REG_T8_ABI:
			case REG_T9_ABI:
			case REG_K0_ABI:
			case REG_K1_ABI:
			case REG_GP_ABI:
			case REG_SP_ABI:
			case REG_FP_ABI:
			case REG_RA_ABI:
			case DOT:
			case OPENING_BRACKET:
			case BIN_NUMERIC:
			case DEC_NUMERIC:
			case HEX_NUMERIC:
			case IDENTIFIER:
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImmediateContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(ASM6502Parser.HASH, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImmediateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_immediate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).enterImmediate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASM6502ParserListener ) ((ASM6502ParserListener)listener).exitImmediate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASM6502ParserVisitor ) return ((ASM6502ParserVisitor<? extends T>)visitor).visitImmediate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImmediateContext immediate() throws RecognitionException {
		ImmediateContext _localctx = new ImmediateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_immediate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(HASH);
			setState(118);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
